--- a/src/style.css
+++ b/src/style.css
@@ -24,14 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  padding: 0; /* Add this line */
+  padding: 0;
   display: flex;
-  flex-direction: column; /* Add this line */
-  place-items: center;
+  flex-direction: column;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
